ingress/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: headlamp
  namespace: kube-system

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - headlamp.takunda.cloud
      secretName: headlamp-tls

  rules:
    - host: headlamp.takunda.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
